# brand-assets-portal

./: .env  .env.example  .gitignore  README.md  app.js  assets-index.json  index.html  package-lock.json  package.json  server.js  styles.css
.github/workflows/: deploy-pages.yml
client/: package-lock.json  package.json  vite.config.ts
client/public/: assets-index.json
client/src/: App.tsx  index.css
test/: .gitignore  .mcp.json  .npmrc  .stylelintrc.cjs  AGENTS.md  README.md  biome.json  devin.md  eslint.config.js  index.html  llms-full.txt  llms.txt  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
test/.github/: CODEOWNERS
test/.reference-screenshots/: dashboard_index.a11y-snapshot.txt  file-management-detail-index.a11y-snapshot.txt
test/docs/: about.md  aegis-integration-guide.md  commands.md  development-rules.md  directory-structure.md  iteration-insights.md  mac-setup-guide.md  onboarding-guide.md  preview-url-guide.ja.md  sandbox-guide.md  tauri-guide.md  tech-stack.md  troubleshooting.ja.md  troubleshooting.md  tutorial-first-page.md  typescript-guide.md  workflow-guide.md  workflow-subagent.md
test/e2e/: loc-sync-visual-comparison.spec.ts  template-component-visual.spec.ts  template-interaction.spec.ts  template-visual-regression.spec.ts
test/eslint-rules/: no-aegis-typography-inline-style.js  no-aegis-typography-inline-style.spec.js  no-raw-pixel-values.js  (+17 more)
test/src-tauri/: Cargo.toml  tauri.conf.json
test/src-tauri/icons/: icon.icns
test/src-tauri/src/: lib.rs  main.rs
(+1310 files in other folders)
