[package]
name = "aegis-lab"
version = "0.1.0"
description = "Aegis Lab Desktop Application"
authors = ["LegalForce"]
edition = "2021"

[lib]
name = "aegis_lab_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
